# voice-copilot

./: .gitignore  LICENSE  MOBILE_APP_SUMMARY.md  MOBILE_SETUP.md  README.md  demo.py  pyproject.toml  setup.sh  test_api.py  voice-transcriber.desktop  voice-transcriber.service  voice_transcriber.env.example
mobile-app/: App.js  README.md  app.json  package.json
mobile-app/assets/: README.md
scripts/: get-local-ip.py  start-with-ngrok.sh
voice_transcriber/: __init__.py  __main__.py  api_server.py  audio_recorder.py  combined_service.py  config.py  hotkey_handler.py  main.py  service.py  system_tray.py  text_inserter.py  text_to_speech.py  transcriber.py
